Add IMPAudioRendererConfig interface that allows configuring the audio renderer
Currently following settings are exposed (not all settings can be currently changed dynamically)

 - AC3 encoding mode
 - Log sample times
 - Sync adjustment
 - Toggle WASAPI shared / exclusive mode
 - Toggle WASAPI event driven mode
 - Allow time stretching
 - Expand mono audio to stereo
 - Set used AC3 bit rate
 - Set used speaker configuration
 - Force channel mixing to be done
 - Set audio delay
 - Set output buffer length
 - Set forced sample rate
 - Set forced bit depth
 - Set used sample ration quality / algorithm
 - Set used filters
 - Set used audio device

--- a/DirectShowFilters/MPAudioRenderer/AudioRenderer.vcxproj
+++ b/DirectShowFilters/MPAudioRenderer/AudioRenderer.vcxproj
@@ -172,6 +172,7 @@
     <None Include="source\MpAudioRenderer.def" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="source\IMPAudioSettings.h" />
     <ClInclude Include="libresample\src\samplerate.h" />
     <ClInclude Include="AE_mixer\AEAudioFormat.h" />
     <ClInclude Include="AE_mixer\AEChannelInfo.h" />
