XMLTV Import plugin: add support for better auto-matching for mc2xml-sourced ATSC and US cable guide data.

--- a/TvEngine3/Mediaportal/TV/Server/Plugins/XmlTvImport/XmlTvImport.csproj
+++ b/TvEngine3/Mediaportal/TV/Server/Plugins/XmlTvImport/XmlTvImport.csproj
@@ -81,6 +81,7 @@
     <Compile Include="..\..\..\..\..\..\Common-MP-TVE3\SolutionInfo.cs">
       <Link>SolutionInfo.cs</Link>
     </Compile>
+    <Compile Include="Mc2XmlId.cs" />
     <Compile Include="XmlTvImportId.cs" />
     <Compile Include="ImportStats.cs" />
     <Compile Include="XmlTvImportSetting.cs" />
