Add codec preferences for previewing. Just one choice for video and one choice for audio. Don't want to over-complicate!

--- a/TvEngine3/Mediaportal/TV/Server/SetupTv/SetupTv.csproj
+++ b/TvEngine3/Mediaportal/TV/Server/SetupTv/SetupTv.csproj
@@ -178,6 +178,7 @@
     <Compile Include="HelpSystem.cs" />
     <Compile Include="InputBox.cs" />
     <Compile Include="Sections\Helpers\ChannelScanHelper.cs" />
+    <Compile Include="Sections\Helpers\Codec.cs" />
     <Compile Include="Sections\Helpers\Enum\ScanType.cs" />
     <Compile Include="Sections\UserPriorities.cs">
       <SubType>UserControl</SubType>
